Fix spacing.

--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -7,6 +7,15 @@
   transform: translate(-50%, -50%);
 }
 
+.centered-2 {
+	margin: 30%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
 .card {
 	background-color: #5F5F5F;
 	padding: 20px;
